<resources>
    <string name="app_name">BonkGram</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_or_login">Phone number or username</string>
    <string name="registration"><u>Registration</u></string>
    <string name="password">Password</string>
    <string name="authorization"><u>Authorization</u></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="user_not_found_err">User with this username or phone number was not found</string>
    <string name="login_length_err">Login must be at least four letters</string>
    <string name="user_exist_err">User is already exist</string>
    <string name="login_latin_err">Login can only consist of Latin letters</string>
    <string name="password_length_err">Password must be at least five symbols</string>
    <string name="password_content_err"><![CDATA[Password can only consist of Latin letters, digits and special characters like: _, &, $]]></string>
    <string name="phone_empty_err">Phone number cannot be empty</string>
    <string name="user_phone_exist_err">User with this phone number is already exist</string>
    <string name="enter_phone_name_err">Enter your phone number or username</string>
    <string name="enter_password_err">Enter your password</string>
    <string name="incorrect_password_err">Incorrect password</string>
    <string name="menu">Menu</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="incomings">Incomings</string>
    <string name="outgoings">Outgoings</string>
    <string name="delete">Delete</string>
    <string name="search_people">Search People</string>
    <string name="enter_username">Enter username…</string>
    <string name="search">Search</string>
    <string name="add_friend">Add friend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="already_friend">Already friend</string>
    <string name="incoming_request">Incoming request</string>
    <string name="outgoing_request">Outgoing request</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats_placeholder">You have no chats.\nBecause you have no friends.</string>
    <string name="logout">Logout</string>
    <string name="friends_placeholder">You have no friends</string>
    <string name="incomings_placeholder">You have no incoming requests</string>
    <string name="outgoings_placeholder">You have no outgoing requests</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message…</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="login_upper_case">Login</string>
    <string name="same_login_error">New login cannot be equal to the old login</string>
    <string name="empty_login_error">New login cannot be an empty string</string>
    <string name="login_change_success">Login successfully changed</string>
    <string name="bonkgram">BonkGram</string>
    <string name="contact_sync_subtitle">Send a friend request to all phone contacts</string>
    <string name="contact_sync_title">Contact synchronization</string>
    <string name="contact_permission_denied">You must grant permission to read the contacts</string>
    <string name="phone_restrictions">Phone number can only consist of numbers, spaces, + and - signs</string>
    <string name="contact_sync_success">Friend request successfully sent to %1d users</string>
    <string name="no_contact_users">No users to whom you can send a friend request</string>
</resources>