<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AuthorizationActivity">

    <EditText
        android:id="@+id/phone_or_login_auth_edit"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_or_login"
        android:inputType="text"
        android:maxLength="320"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authErrorMessage"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password_auth_edit"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="32"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_or_login_auth_edit" />

    <TextView
        android:id="@+id/reg_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="165dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:text="@string/registration"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/auth_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="177dp"
        android:text="@string/bonkgram"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="66dp"
        android:onClick="onAuthButtonClick"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_auth_edit" />

    <TextView
        android:id="@+id/authErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textColor="@color/design_default_color_error"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>